--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
           <!-- Add your name -->
           <p>SumitDutta007</p>
           <!-- Add your GitHub username -->
-          <a href="https://github.com/SumitDutta007">GitHub</a>
+          <a href="https://github.com/PUjjaliya">GitHub</a>
           <!-- Add your GitHub profile link -->
-          <a href="https://sumitdutta007.github.io/SumitDutta007/">Portfolio</a>
+          <a href="https://myportfolio-pujjaliya.vercel.app/">Portfolio</a>
           <!-- Add your Portfolio profile link -->
         </div>
       </div>
